# asam-osi-utilities

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  REUSE.toml  vcpkg.json
.github/: dependencies.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/ideas/: rust_mcap.md
.github/workflows/: cd_docs.yml  cd_release.yml  cd_testpypi.yml  ci.yml  ci_build.yml  ci_compliance.yml  ci_cpp.yml  ci_cpp_format.yml  ci_cpp_lint.yml  ci_format.yml  ci_lint.yml  ci_python.yml  spdx_check.yml
.reuse/: dep5
LICENSES/: MPL-2.0.txt
cmake/: FindCompression.cmake  VersionFromFile.cmake
cpp/: .clang-format  .clang-tidy
cpp/cmake/: FindCompression.cmake  OSIUtilitiesConfig.cmake.in
cpp/examples/: CMakeLists.txt  README.md  benchmark.cpp  convert_gt2sv.cpp  convert_osi2mcap.cpp  example_mcap_multi_channel_writer.cpp  example_mcap_reader.cpp  example_mcap_writer.cpp  example_single_channel_binary_reader.cpp  example_single_channel_binary_writer.cpp  example_txth_reader.cpp  example_txth_writer.cpp
cpp/include/osi-utilities/tracefile/: FilenameUtils.h  Reader.h  TimestampUtils.h  TraceFileConfig.h  Writer.h
cpp/include/osi-utilities/tracefile/reader/: MCAPTraceFileReader.h  SingleChannelBinaryTraceFileReader.h  TXTHTraceFileReader.h
cpp/include/osi-utilities/tracefile/writer/: MCAPTraceFileChannel.h  MCAPTraceFileWriter.h  SingleChannelBinaryTraceFileWriter.h  TXTHTraceFileWriter.h
cpp/src/: CMakeLists.txt
cpp/src/tracefile/: FilenameUtils.cpp
cpp/src/tracefile/reader/: MCAPTraceFileReader.cpp  Reader.cpp  SingleChannelBinaryTraceFileReader.cpp  TXTHTraceFileReader.cpp
cpp/src/tracefile/writer/: MCAPTraceFileChannel.cpp  MCAPTraceFileWriter.cpp  SingleChannelBinaryTraceFileWriter.cpp  TXTHTraceFileWriter.cpp  Writer.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/src/tracefile/: EsminiFixture_test.cpp  FilenameUtils_test.cpp  MCAPMultiChannel_test.cpp  RoundTrip_test.cpp  TimestampUtils_test.cpp  TraceFileReaderFactory_test.cpp
doc/: Doxyfile.in  building.md  ci-pipeline.md  cmake-vcpkg-audit-issue-21.md  conf.py  contributing.md  development.md  examples.md  index.rst  integration.md  overview.md  releasing.md  setup.md  workflow.md
doc/cpp/: binary_reader.rst  binary_writer.rst  config.rst  index.rst  mcap_channel.rst  mcap_reader.rst  mcap_writer.rst  reader.rst  txth_reader.rst  txth_writer.rst  types.rst  writer.rst
doc/guides/: index.rst
doc/python/: binary_reader.rst  binary_writer.rst  index.rst  mcap_channel.rst  mcap_reader.rst  mcap_writer.rst  reader.rst  txth_reader.rst  txth_writer.rst  types.rst  writer.rst
examples/: CMakeLists.txt  README.md  benchmark.cpp  benchmark_read_write.cpp  convert_osi2mcap.cpp  example_mcap_reader.cpp  example_mcap_writer.cpp  example_single_channel_binary_reader.cpp  example_single_channel_binary_writer.cpp  example_txth_reader.cpp  example_txth_writer.cpp
include/osi-utilities/tracefile/: OsiFileAnalyzer.h  Reader.h  TraceFileConfig.h  Writer.h
include/osi-utilities/tracefile/reader/: MCAPTraceFileReader.h  SingleChannelBinaryTraceFileReader.h  TXTHTraceFileReader.h
include/osi-utilities/tracefile/writer/: MCAPTraceFileChannel.h  MCAPTraceFileWriter.h  SingleChannelBinaryTraceFileWriter.h  TXTHTraceFileWriter.h
python/: .gitignore  Makefile  README.md  pyproject.toml
python/examples/: README.md  benchmark.py  convert_osi2mcap.py  example_channel_reader.py  example_mcap_multi_channel_writer.py  example_mcap_reader.py  example_mcap_writer.py  example_reader_factory.py  example_single_channel_binary_reader.py  example_single_channel_binary_writer.py  example_txth_reader.py  example_txth_writer.py
python/osi_utilities/: __init__.py  _types.py  filename.py  message_types.py
python/osi_utilities/api/: __init__.py  channel.py  channel_reader.py  channel_writer.py  types.py
python/osi_utilities/converters/: __init__.py  gt2sv.py
python/osi_utilities/tracefile/: __init__.py  _config.py  _mcap_utils.py  _types.py  binary_reader.py  binary_writer.py  channel_reader.py  configure.py  format.py  mcap_channel.py  mcap_reader.py  mcap_writer.py  reader.py  timestamp.py  todo.md  txth_reader.py  txth_writer.py  writer.py
python/osi_utilities/tracefile/readers/: __init__.py  base.py  multi.py  single.py  textformat.py
python/osi_utilities/tracefile/writers/: __init__.py  base.py  multi.py  single.py  textformat.py
python/tests/: __init__.py  test_channel_api.py  test_convert_gt2sv.py  test_extended.py  test_timestamp.py  test_tracefile.py
scripts/: generate_test_traces.sh  resolve-clang-format.sh  setup-dev.ps1  setup-dev.sh  sync_version.ps1  sync_version.sh
src/: CMakeLists.txt
src/tracefile/: MCAPImplementation.cpp  OsiFileAnalyzer.cpp
src/tracefile/reader/: MCAPTraceFileReader.cpp  Reader.cpp  SingleChannelBinaryTraceFileReader.cpp  TXTHTraceFileReader.cpp
src/tracefile/writer/: MCAPTraceFileChannel.cpp  MCAPTraceFileWriter.cpp  MCAPWriterUtils.h  SingleChannelBinaryTraceFileWriter.cpp  TXTHTraceFileWriter.cpp
test-data/: 5frames_gt_esmini.mcap  ccftap_gt_ncap.osi  ccrs_sv_ncap.osi  cpna_gt_ncap.osi  cpna_sv_ncap.osi
tests/: CMakeLists.txt  reuse_spdx_invalid.cpp
tests/data/: 5frames_gt_esmini.osi  cbla_gt_ncap.osi  cbla_sv_ncap.osi  ccftap_sv_ncap.osi  ccrs_gt_ncap.mcap  ccrs_gt_ncap.osi
tests/integration/: run_converter_integration.sh  run_reader_integration.sh
tests/intentional-failures/: reuse_spdx_invalid.cpp
tests/src/: TestUtilities.cpp  TestUtilities.h
tests/src/tracefile/: EsminiFixture_test.cpp  MCAPMultiChannel_test.cpp  RoundTrip_test.cpp  TraceFileReaderFactory_test.cpp
tests/src/tracefile/reader/: MCAPTraceFileReader_test.cpp  SingleChannelBinaryTraceFileReader_test.cpp  TXTHTraceFileReader_test.cpp
tests/src/tracefile/writer/: MCAPTraceFileChannel_test.cpp  MCAPTraceFileWriter_test.cpp  SingleChannelBinaryTraceFileWriter_test.cpp  TXTHTraceFileWriter_test.cpp
(+7 files in other folders)
