# SPDX-License-Identifier: MPL-2.0
# SPDX-FileCopyrightText: Copyright (c) 2026, Bayerische Motoren Werke Aktiengesellschaft (BMW AG)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osi-utilities"
version = "0.1.0"
description = "Python utilities for reading and writing ASAM OSI trace files (MCAP, binary .osi, text .txth)"
readme = "README.md"
license = {text = "MPL-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "BMW AG"},
]
keywords = ["osi", "open-simulation-interface", "mcap", "protobuf", "simulation", "automated-driving"]
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "protobuf>=4.21",
    "mcap>=1.1",
    "mcap-protobuf-support>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "mypy-protobuf",
]

[project.urls]
Homepage = "https://github.com/lichtblick-suite/asam-osi-utilities"
Repository = "https://github.com/lichtblick-suite/asam-osi-utilities"
Issues = "https://github.com/lichtblick-suite/asam-osi-utilities/issues"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=osi_utilities --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
